--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@ layout: default
       </div>
       <!-- Biografía extendida -->
       <div class="bio-text mt-4">
+        <h2 class="text-center mb-5">Sobre mí</h2>
+
         <p>
-          <strong>Sobre mí</strong> - Doctor en el programa de Ingeniería de producción y computación de la Universidad
+          Doctor en el programa de Ingeniería de producción y computación de la Universidad
           de León. Mis principales
           líneas de investigación
           se centran en la ciberseguridad y explicabilidad aplicada a sistemas autónomos (XAR), principalmente en robots
@@ -81,7 +83,7 @@ layout: default
           <div class="card-body">
             <h5 class="card-title">Universidad de León</h5>
             <p class="card-text">Doctor en Producción y Computación</p>
-            <p class="text-muted">2023 - 2025</p>
+            <p class="text-muted">2022 - 2025</p>
           </div>
         </div>
       </div>
