--- a/software.html
+++ b/software.html
@@ -68,10 +68,10 @@ layout: default
 
             </div>
 
-            <button class="carousel-control-prev" type="button" data-bs-target="#appsCarousel" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#gamesCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#appsCarousel" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#gamesCarousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
             </button>
         </div>
