--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
         <!-- Información -->
         <div class="bio-info">
           <h3 class="mb-1">David Sobrín-Hidalgo</h3>
-          <p class="text-muted mb-2"><strong>Investigador Posdoctoral - <a
+          <p class="text-muted mb-2"><strong>Profesor Ayudante Doctor - <a
                 href="https://robotica.unileon.es/index.php?title=Home" target="_blank" rel="noopener noreferrer">Grupo
                 de robótica</a></strong></p>
           <p class="mb-0">
@@ -151,12 +151,32 @@ layout: default
               <div class="duration date-label-left position-relative text-md-end">
                 <img src="files/imgs/BotyBot.png" alt="Logo Grupo Robótica" class="timeline-icon-small">
                 <h5 class="my-2">Grupo de robótica - Universidad de León.</h5>
-                <small class="text-muted mb-0">Ago. 2025 - Actualidad</small>
+                <small class="text-muted mb-0">Ago. 2025 - Sep. 2025</small>
               </div>
             </div><!--end col-->
             <div class="col-lg-6 col-md-6 col-sm-6 mt-4 mt-sm-0">
               <div class="event event-description-right float-left text-start">
                 <h6 class="title mb-1 text-capitalize">Investigador posdoctoral</h6>
+                <p class="timeline-subtitle mt-3 mb-0 text-muted">Investigador en robótica y ciberseguridad.
+                  Profesor de la Universidad de León en el área de Arquitectura y Tecnología de Computadores.
+                </p>
+              </div>
+            </div><!--end col-->
+          </div><!--end row-->
+        </div><!--end timeline item-->
+
+        <div class="timeline-item mt-5 pt-4">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 mt-4 mt-sm-0">
+              <div class="duration date-label-left position-relative text-md-end">
+                <img src="files/imgs/BotyBot.png" alt="Logo Grupo Robótica" class="timeline-icon-small">
+                <h5 class="my-2">Grupo de robótica - Universidad de León.</h5>
+                <small class="text-muted mb-0">Sep. 2025 - Actualidad</small>
+              </div>
+            </div><!--end col-->
+            <div class="col-lg-6 col-md-6 col-sm-6 mt-4 mt-sm-0">
+              <div class="event event-description-right float-left text-start">
+                <h6 class="title mb-1 text-capitalize">Profesor Ayudante Doctor</h6>
                 <p class="timeline-subtitle mt-3 mb-0 text-muted">Investigador en robótica y ciberseguridad.
                   Profesor de la Universidad de León en el área de Arquitectura y Tecnología de Computadores.
                 </p>
